apps/databasus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: databasus
  namespace: apps
  labels:
    managed-by: flux
    app.kubernetes.io/part-of: home-cluster
    environment: production
spec:
  selector:
    app: databasus
  ports:
    - port: 80
      targetPort: 4005
